[package]
name = "sensor_mqtt"
version = "0.2.1"
authors = ["Andrew Rowson <github@growse.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bme280 = { version = "0.4.4", features = ["serde"] }
linux-embedded-hal = "0.4.0-alpha.2"
futures="0.3.28"
log = "0.4"
rumqttc = "0.22"
simplelog = "0.12.1"
i2cdev = "0.5"
config = "0.13"
clap = { version = "4.3.10", features = ["derive"] }
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
whoami = "1"
serde_json = "1"
tokio = { version = "1.29.1", features = ["rt-multi-thread","time","macros"] }
