[package]
name = "sensor_mqtt"
version = "0.2.1"
authors = ["Andrew Rowson <github@growse.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bme280 = { version = "0.4.4", features = ["serde"] }
linux-embedded-hal = "0.4.0-alpha.2"
futures="0.3.30"
log = "0.4"
rumqttc = "0.23"
simplelog = "0.12.1"
i2cdev = "0.6"
config = "0.13"
clap = { version = "4.4.15", features = ["derive"] }
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
whoami = "1"
serde_json = "1"
tokio = { version = "1.35.1", features = ["rt-multi-thread","time","macros"] }
